<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Indoor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请在此输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="message_search_hint">搜索&#8230;</string>
    <string name="newscontent">新闻内容</string>
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="main_tab_shopping">购物</string>
    <string name="main_tab_set">设置</string>
    <string name="main_tab_newsmedia">新闻媒体</string>
    <string name="progress_loading">正在获取数据......</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="loadmore">显示下20条</string>
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>
    <string name="peoplemap">朋友分布</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>
    <string name="logout">退出登录</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    <string name="send_state">已读</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="username">用户名</string>
    <string name="search">搜索</string>
    <string name="new_friends">新朋友</string>
    <string name="near_people">附近的人</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="list_no_data">没有任何相关数据</string>
    <string name="set_wallpaper">背景设置</string>
    <string name="show_notice">\t\t\t\t\t自V1.0.6版本开始，应用源码中将不再公开ApplicationId,开发者请自行到官网申请。\n\t\t\t\t\t申请成功之后在应用程序启动页(SplashActivity)进行初始化操作!</string>
    <string name="title_activity_friends_map">FriendsMapActivity</string>
    <string name="title_activity_set_wallpaper">SetWallpaperActivity</string>
    <string name="title_activity_lives">LivesActivity</string>
    <string name="title_activity_friends_status">FriendsStatusActivity</string>
    <string name="title_activity_find_more">FindMoreActivity</string>
    <string name="friendsstatus">朋友圈</string>
    <string name="lives">生活周边</string>
    <string name="findmore">发现</string>
    <string name="choose">选择你想去的地方</string>
    <string name="bus">公交站</string>
    <string name="stop">停止导航</string>
    <string name="rightnow">点击图标开启导航</string>
    <string name="eat">餐饮服务</string>
    <string name="buy">购物服务</string>
    <string name="hotal">住宿服务</string>
    <string name="movie">影剧院</string>
    <string name="sport">运动场馆</string>
    <string name="hospita">医疗保健</string>
    <string name="park">停车场</string>
    <string name="gongce">公共厕所</string>
    <string name="fun">娱乐场所</string>
    <string name="atm">自动提款机</string>
    <string name="bank">银行</string>
    <string name="book">科教文化</string>
    <string name="fengjing">风景名胜</string>
    <string name="zhengfu">政府机关</string>
    <string name="buss">公交车站</string>
    <string name="more">敬请期待后续更多功能推出!</string>
    <string name="about">关于我们</string>
    <string name="title_activity_navigator">NavigatorActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_daily_article">DailyArticleActivity</string>
    <string name="title_activity_how_old">HowOldActivity</string>
    <string name="title_activity_hypnotist">HypnotistActivity</string>
    <string name="title_activity_publish_status">PublishStatusActivity</string>
    <string name="title_activity_my_status">MyStatusActivity</string>
    <string name="title_activity_awhile">AwhileActivity</string>
    <string name="title_activity_amoment">AmomentActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

</resources>