<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/path"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"  
    android:weightSum="4"
    android:orientation="horizontal" 
    android:layout_gravity="bottom"
    android:baselineAligned="false">
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_weight="1.5"
        android:orientation="vertical" >
        <TextView 
           android:id="@+id/pathname"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="15dp"
           android:textSize="20sp"
           android:textStyle="bold"
           android:text="@string/hello_world"/>
       <TextView 
           android:id="@+id/pathcontent"
           android:layout_width="match_parent"
           android:layout_height="match_parent" 
           android:layout_marginTop="7dp"
           android:textSize="16sp"
           android:textStyle="normal"
           android:text="@string/hello_world"/>
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_weight="2.5"
       android:orientation="horizontal" >
       <ImageView
           android:layout_width="50dp"
           android:layout_height="match_parent"
           android:src="@drawable/walking" 
           android:contentDescription="@string/hello_world"/>
        <LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="match_parent"
	       android:orientation="vertical" > 
		   <TextView 
	           android:id="@+id/pathdistance"
	           android:layout_width="fill_parent"
	           android:layout_height="wrap_content"
	           android:layout_marginTop="18dp"
	           android:textSize="13sp"
	           android:textColor="#006600"
	           android:text="@string/app_name"/>
	       <TextView 
	           android:id="@+id/pathtime"
	           android:layout_width="fill_parent"
	           android:layout_height="wrap_content"
	           android:layout_marginTop="15dp"
	           android:textSize="13sp"
	           android:textColor="#006600"
	           android:text="@string/rightnow"/>
       </LinearLayout>
      
   </LinearLayout>
  
</LinearLayout>
