<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="3dp">

    <LinearLayout
        android:id="@+id/layout_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/frame_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_msg_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:contentDescription="@string/action_settings"
                android:src="@drawable/msg_tips" />

            <ImageView
                android:layout_width="50.0dip"
                android:layout_height="50.0dip"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="6.0dip"
                android:contentDescription="@string/action_settings"
                android:padding="5dp"
                android:src="@drawable/newfriend" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_new_name"
            style="@style/Smile.TextView._Black"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/new_friends"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_1"
        android:layout_below="@id/layout_new"
        android:background="@drawable/base_horizontal_line"></View>

    <LinearLayout
        android:id="@+id/layout_near"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50.0dip"
            android:layout_height="50.0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6.0dip"
            android:contentDescription="@string/action_settings"
            android:padding="5dp"
            android:src="@drawable/nearpeople" />

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/near_people"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_1"
        android:layout_below="@id/layout_near"
        android:background="@drawable/base_horizontal_line"></View>

    <LinearLayout
        android:id="@+id/layout_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50.0dip"
            android:layout_height="50.0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6.0dip"
            android:contentDescription="@string/action_settings"
            android:padding="5dp"
            android:src="@drawable/friends" />

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/peoplemap"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_1"
        android:layout_below="@id/layout_map"
        android:background="@drawable/base_horizontal_line"></View>

    <LinearLayout
        android:id="@+id/layout_friendsstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line3"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50.0dip"
            android:layout_height="50.0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6.0dip"
            android:contentDescription="@string/action_settings"
            android:padding="5dp"
            android:src="@drawable/friendsstatus" />

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/friendsstatus"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_1"
        android:layout_below="@id/layout_friendsstatus"
        android:background="@drawable/base_horizontal_line"></View>

    <LinearLayout
        android:id="@+id/layout_lives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line4"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50.0dip"
            android:layout_height="50.0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6.0dip"
            android:contentDescription="@string/action_settings"
            android:padding="5dp"
            android:src="@drawable/lives" />

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/lives"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_1"
        android:layout_below="@id/layout_lives"
        android:background="@drawable/base_horizontal_line"></View>

    <LinearLayout
        android:id="@+id/layout_findmore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line5"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50.0dip"
            android:layout_height="50.0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6.0dip"
            android:contentDescription="@string/action_settings"
            android:padding="5dp"
            android:src="@drawable/findmore" />

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/findmore"
            android:textSize="20sp" />
    </LinearLayout>


</RelativeLayout>